--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.0.0",
     "@types/three": "^0.170.0",
+    "jotai": "^2.10.3",
     "mongodb": "^6.11.0",
     "next": "15.0.3",
     "openai": "^4.73.0",
