--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/V.jsx", "src/app/components/V2.tsx", "src/app/components/V2.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/V.jsx", "src/app/components/V2.tsx", "src/app/components/V2.tsx", "src/app/components/Model.jsx"],
   "exclude": ["node_modules"]
 }
